# GUI_robotic_exoskeleton

./: .gitignore  README.md  launch.sh  launch_gui.sh  setup.sh
alice_pkg/: package.xml
alice_pkg/include/alice_pkg/: connection_setting.h  frame_window.h  log_view.h  main_form.h  main_form.ui  select_user_form.ui  session_form.h  training_form.h  user.h  walk_thread.h
alice_pkg/src/: control_form.cpp  frame_window.cpp  log.cpp  log_view.cpp  select_user_form.cpp  session_form.cpp  training_form.cpp  walk_thread.cpp
fake_exo/: package.xml
fake_exo_pkg/: CMakeLists.txt  package.xml
fake_exo_pkg/launch/: fake_exo_pkg.launch
fake_exo_pkg/nodes/: exoskeleton_node.cpp
fake_exo_pkg/srv/: Test.srv
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/include/fake_exo/: serv.h  servRequest.h  servResponse.h
install/include/gui_pkg/: control_form.h  frame_window.h  global_variable.h  log.h  main_form.h  main_form.ui  my_msg.h  select_user_form.h  select_user_form.ui  serv.h  servRequest.h  servResponse.h  session_form.ui  step_form.h  training_form.ui  walking_form.h
install/share/fake_exo/cmake/: fake_exo-msg-extras.cmake  fake_exo-msg-paths.cmake  fake_exoConfig.cmake
install/share/gui_pkg/: package.xml
install/share/gui_pkg/cmake/: gui_pkg-msg-extras.cmake  gui_pkg-msg-paths.cmake  gui_pkgConfig.cmake
install/share/gui_pkg/launch/: gui_pkg.launch
install/share/rosserial_arduino/cmake/: rosserial_arduinoConfig.cmake
install/share/rosserial_chibios/cmake/: rosserial_chibiosConfig.cmake
install/share/rosserial_client/cmake/: rosserial_clientConfig.cmake
install/share/rosserial_embeddedlinux/cmake/: rosserial_embeddedlinuxConfig.cmake
install/share/rosserial_mbed/cmake/: rosserial_mbedConfig.cmake
install/share/rosserial_msgs/cmake/: rosserial_msgsConfig.cmake
install/share/rosserial_python/cmake/: rosserial_pythonConfig.cmake
install/share/rosserial_server/cmake/: rosserial_serverConfig.cmake
install/share/rosserial_test/cmake/: rosserial_testConfig.cmake
install/share/rosserial_tivac/cmake/: rosserial_tivacConfig.cmake
install/share/rosserial_vex_cortex/cmake/: rosserial_vex_cortexConfig.cmake
install/share/rosserial_vex_v5/cmake/: rosserial_vex_v5Config.cmake
install/share/rosserial_windows/cmake/: rosserial_windowsConfig.cmake
install/share/rosserial_xbee/cmake/: rosserial_xbeeConfig.cmake
other/Python Operation Code - Alice 2022/: Alice2022_main.py
other/Python Operation Code - Alice 2022/Alice2022_virtenv/: Alice2022_virtenv.wpr  pyvenv.cfg
other/Python Operation Code - Alice 2022/Alice2022_virtenv/Scripts/: activate  activate.bat  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py  wsdump.py
src/alice_pkg/: CMakeLists.txt
src/alice_pkg/include/alice_pkg/: control_form.h  (+10 more)
src/alice_pkg/launch/: rosserial.launch
src/alice_pkg/msg/: my_msg.msg
src/alice_pkg/src/: connected_component.cpp  control_form.cpp  log_view.cpp  select_user_form.cpp  session_form.cpp  step_form.cpp  training_form.cpp  walking_form.cpp
src/fake_exo/: CMakeLists.txt
src/fake_exo/launch/: fake_exo.launch
src/fake_exo/nodes/: exoskeleton_node.cpp
src/gui_pkg/: CMakeLists.txt  package.xml
src/gui_pkg/include/gui_pkg/: connect_thread.h  connected_component.h  connection_setting.h  connection_setting.ui  control_form.h  control_form.ui  control_window.h  control_window.ui  create_user_form.h  create_user_form.ui  dialog_form.cpp  dialog_form.h  dialog_form.ui  frame_window.h  frame_window.ui  global_user_list.h  global_variable.h  insert_form.h  insert_form.ui  log.h  log_view.h  log_view.ui  main_form.h  main_form.ui  msg.h  select_user_form.h  select_user_form.ui  selection_form.h  selection_form.ui  session_form.h  session_form.ui  step_form.h  step_form.ui  step_window.h  step_window.ui  training_form.h  training_form.ui  training_window.h  training_window.ui  user.h  (+6 more)
src/gui_pkg/nodes/: start_gui_node.cpp
src/gui_pkg/rc/: aliceresources.qrc  resource.qrc
src/gui_pkg/src/: connect_thread.cpp  connected_component.cpp  connection_setting.cpp  connection_setting.h  connection_setting.ui  control_form.cpp  control_window.cpp  create_user_form.cpp  create_user_form.cpp.autosave  dialog_form.cpp  frame_window.cpp  insert_form.cpp  log.cpp  log_view.cpp  main_form.cpp  select_user_form.cpp  select_user_form.cpp.autosave  selection_form.cpp  session_form.cpp  step_form.cpp  step_window.cpp  test.cpp  training_form.cpp  training_window.cpp  user.cpp  user.cpp.autosave  user_list.cpp  walk_thread.cpp  walking_form.cpp  walking_window.cpp
src/gui_pkg/srv/: serv.srv
(+25 files in other folders)
